# SourcetrailGoIndexer

./: go.mod  run.sh
sourcetrail/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sourcetraildb.go  sourcetraildbGO_wrap.cxx
sourcetrail/core/: Makefile  cmake_install.cmake
src/: ast.go  cg.go  indexer.go  main.go
test/: AnotherFile.go  cg.srctrldb  main.go
